style.css
* {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

body {
    background-color: rgb(245, 245, 245);
    font-size: 18px;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.header {
    background-color: white;
    height: auto;
    padding-bottom: 1em;
    border-bottom: 5px solid rgb(0, 0, 0);
}

.container {
    margin: auto;
    padding-top: 2em;
    display: flex;
}

.imgwrap {
    width: 100%;
    margin: auto;
}

.imgwrap img {
    display: block;
    max-width: 100%;
    height: auto;
    align-self: center;
    border-radius: 0.2em;
}

#gohome p {
    transition: 0.05s ease-in-out;
}

#gohome p:hover {
    color: rgb(71, 71, 237);
    text-decoration: underline;
}

p {
    margin: 0;
    color: rgb(139, 139, 139);
    font-size: 0.9em;
}

h1 {
    color: black;
    font-size: 1.5em;
    margin: 0.5em 0;
}

.error-text {
    color: rgb(177, 177, 177);
    padding: 0.5em 0em;
}

h3 {
    font-weight: 600;
    margin-bottom: 1em;
    padding-top: 12em;
    margin-top: -5em;
}

a h4 {
    text-decoration: none;
}

h4 {
    font-size: 0.8em;
    font-weight: 600;
    margin: 0.15em 0.15em;
    display: inline-block;
    color: black;
}

.company-news {
    margin: 1.25em 0em;
}

.chips {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin-bottom: -5em;
    z-index: 1;
}

.chip {
    /*border: 0.5px solid #ddd;*/
    border: 5px solid #000;
    border-radius: 5px;
    background-color: #fff;
    padding: 0.5em;
    margin: 0.25em;
    transition: 0.05s ease-in-out;
    box-shadow: 3px 3px 0px rgb(201, 201, 201);
}

.chip:hover {
    /*background-color: rgb(0, 111, 255, 21%);
    border: 0.5px solid rgb(0, 111, 255);*/
    background-color: rgb(218, 218, 218);
}

.chip:hover h4 {
    color: rgb(71, 71, 237);
}

a {
    text-decoration: none;
}

a:hover h1 {
    text-decoration: underline;
    color: rgb(71, 71, 237);
}

.news-list {
    margin: auto;
    padding-top: 2em;
    padding-bottom: 5em;
    display: flex;
    flex-direction: column;
}

.logo {
    display: inline-block;
    color: rgb(0, 0, 0);
    font-weight: 700;
    font-size: 2em;
    transition: 0.1s ease-in-out;
    margin: 0.25em 0;
}

.logo:hover {
    text-decoration: underline;
}

.search {
    display: block;
    margin: 0.5em;
}

.search ::placeholder {
    color: rgb(173, 173, 173);
}

.input {
    width: 300px;
    height: 1.7em;
    /*border: 0.5px solid #ddd;*/
    border: 5px solid #000;
    border-radius: 4px;
    font-size: 1.2em;
    padding: 0.2em;
    margin: auto;
}

.input:focus {
    outline: none;
    /*border: 0.5px solid rgb(0, 111, 255);*/
    box-shadow: none;
}

.button {
    margin: auto;
    width: 140px;
    height: 2.5em;
    font-size: 1.2em;
    padding: 0.15em;
    background-color: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
    /*border: 0.5px solid #ddd;*/
    border: 5px solid #000;
    border-radius: 5px;
    line-height: 0;
    box-shadow: 3px 3px 0px rgb(201, 201, 201);
    cursor: pointer;
    transition: 0.1s ease-in-out;
}

.button:hover {
    /*background-color: rgb(0, 111, 255, 21%);
    border: 0.5px solid rgb(0, 111, 255);*/
    background-color: rgb(218, 218, 218);
    color: rgb(71, 71, 237);
}

#myBtn {
    display: none;
    position: fixed;
    bottom: 30px;
    right: 40px;
    z-index: 99;
    /*border: 0.5px solid #ddd;*/
    border: 5px solid #000;
    background-color: #ffffff;
    color: rgb(0, 0, 0);
    cursor: pointer;
    padding: 0.6em;
    border-radius: 0.2em;
    font-size: 1.2em;
    transition: 0.05s ease-in-out;
    box-shadow: 3px 3px 0px rgb(201, 201, 201);
}

#myBtn:hover {
    /*
    background-color: rgb(0, 111, 255, 21%);
    border: 0.5px solid rgb(0, 111, 255);*/
    background-color: rgb(218, 218, 218);
    color: rgb(71, 71, 237);
}

li {
    overflow: hidden;
    display: flex;
    justify-content: space-between;
    padding: 1.5em;
    /*border: 0.2px solid #ddd;*/
    border: 5px solid #000;
    border-radius: 0.1em;
    background-color: white;
    /*box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.01);*/
    box-shadow: 6px 7px 0px rgb(201, 201, 201);
    list-style: none;
    text-align: left;
    /*margin-bottom: 0.5em;*/
    margin-bottom: 1.5em;
    transition: 0.12s ease-in-out;
}

li:active, .chip:active, #myBtn:active, .button:active {
    box-shadow: none;
}

/* Medium devices (landscape tablets, 768px and up) */

@media only screen and (max-width: 768px) {
    .container {
        width: 90%;
        flex-direction: column;
        justify-content: space-between;
    }
    .news-list {
        width: 90%;
    }
    .search {
        max-width: 100%;
        overflow: hidden;
        margin: 2em 0 0 0;
    }
    .search .input {
        width: calc(100% - 19px);
    }
    .search .button {
        width: 100%;
        margin: 1em 0 1em 0;
    }
    li {
        flex-direction: column-reverse;
    }
    .imgwrap img {
        width: 100%;
        margin-bottom: 1.5em;
    }
}

/* Large devices (laptops/desktops, 992px and up) */

@media only screen and (min-width: 769px) {
    .container {
        width: 80%;
        flex-direction: row;
        justify-content: space-between;
    }
    .news-list {
        width: 80%;
    }
    li {
        flex-direction: column-reverse;
    }
    .imgwrap img {
        width: 100%;
        margin-bottom: 1.5em;
    }
    .header {
        top: 0;
        position: sticky;
        z-index: 20;
    }
}

@media only screen and (min-width: 992px) {
    .container {
        width: 90%;
        flex-direction: row;
        justify-content: space-between;
    }
    .news-list {
        width: 70%;
    }
    li {
        flex-direction: row;
    }
    .imgwrap img {
        width: 85%;
        margin: auto;
        float: right;
    }
    .header {
        top: 0;
        position: sticky;
        z-index: 20;
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */

@media only screen and (min-width: 1200px) {
    .container {
        width: 90%;
        flex-direction: row;
        justify-content: space-between;
    }
    .news-list {
        width: 60%;
    }
    li {
        flex-direction: row;
    }
    .imgwrap img {
        width: 85%;
        margin: auto;
        float: right;
    }
    .header {
        top: 0;
        position: sticky;
        z-index: 20;
    }
}

